scrolling on mobile with overflow fixed

--- a/src/output.css
+++ b/src/output.css
@@ -1198,6 +1198,10 @@ video {
   padding-top: 0px;
 }
 
+.pt-14 {
+  padding-top: 3.5rem;
+}
+
 .text-left {
   text-align: left;
 }
